Deleted a lot of commented out stuff; other minor changes

--- a/pictures/sprouting_graph_3.tex
+++ b/pictures/sprouting_graph_3.tex
@@ -15,8 +15,8 @@
        shape=rectangle, %rounded corners,
        align=center,
        minimum width = .4cm,
-       minimum height = .4cm,
-       fill = green!60!blue!70
+       minimum height = .4cm
+%       fill = green!60!blue!70
     }
 %    bad/.style = {
 %       shape=rectangle, %rounded corners,
